--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="vikings, final sesion " />
 	<meta name="description" content="contenido de la serie Vikingos ultima sesion" />
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-	<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="./default.css" rel="stylesheet" type="text/css" media="all" />
 
 </head>
 
@@ -49,7 +49,7 @@
 						<div class="title">
 							<h2>Entrevista</h2><span class="byline">Katheryn Winnick</span>
 						</div>
-						<a href="#" class="image image-full"><img src="images/pic01.png" alt="" /></a>
+						<a href="#" class="image image-full"><img src="./images/pic01.png" alt="" /></a>
 						<p>La actriz que interpreta a Lagertha en la serie más vista de los últimos tiempos nos cuenta
 							como vivió esta última temporada desde adentro.</p>
 						<a href="#" class="button">Leer Más</a>
@@ -58,7 +58,7 @@
 						<div class="title">
 							<h2>Filmación</h2><span class="byline">Irlanda - Paraiso Vikingo</span>
 						</div>
-						<a href="#" class="image image-full"><img src="images/pic02.png" alt="" /></a>
+						<a href="#" class="image image-full"><img src="./images/pic02.png" alt="" /></a>
 						<p>Te sorprenderá saber que la mayoría de las temporadas de Vikingos fueron grabadas mayormente
 							en sitios de Irlanda y no en los bellos paisajes de Noruega o Suecia.</p>
 						<a href="#" class="button">Leer Más</a>
@@ -105,22 +105,22 @@
 				<span class="byline">informate de todo el mundo fantastico de la serie VIKINGOS </span>
 			</div>
 			<div id="column1">
-				<a href="#" class="image image-full"><img src="images/1.jpg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="./images/1.jpg" alt="" /></a>
 				<p>Los 5 personajes de 'Vikingos' que tienen una gran historia detrás, conoce mas de ellos.</p>
 				<a href="#" class="button">Leer Más</a>
 			</div>
 			<div id="column2">
-				<a href="#" class="image image-full"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="./images/2.jpg" alt="" /></a>
 				<p>El remolque donde vive Travis Fimmel y otros detalles de su pecular vida que no conocías.</p>
 				<a href="#" class="button">Leer Más</a>
 			</div>
 			<div id="column3">
-				<a href="#" class="image image-full"><img src="images/3.jpg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="./images/3.jpg" alt="" /></a>
 				<p>'Vikingos': ¿Está el viaje de Ubbe a América inspirado en una historia real?, ¿querés Saber?.</p>
 				<a href="#" class="button">Leer Más</a>
 			</div>
 			<div id="column4">
-				<a href="#" class="image image-full"><img src="images/4.jpg" alt="" /></a>
+				<a href="#" class="image image-full"><img src="./images/4.jpg" alt="" /></a>
 				<p>'Vikingos': El creador revela cómo fue matar a Ragnar y escribir el final que todos esperaban.</p>
 				<a href="#" class="button">Leer Más</a>
 			</div>
