add label in HTML

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 
 <body>
-	<div id="header-wrapper">
+	<header id="header-wrapper">
 		<div id="header-wrapper2">
 			<div id="header" class="container">
 				<div id="logo">
-					<h1><a href="#"><img src="./images/logo.png" alt="Logo Vikings"></a></h1>
+					<a href="#"><img src="./images/logo.png" alt="Logo Vikings"></a>
 				</div>
-				<div id="menu">
+				<nav id="menu">
 					<ul>
 						<li class="current_page_item"><a href="#" accesskey="1" title="">Inicio</a></li>
 						<li><a href="#" accesskey="2" title="">Galería</a></li>
@@ -28,22 +28,27 @@
 						<li><a href="#" accesskey="4" title="">Detrás de Escena</a></li>
 						<li><a href="#" accesskey="5" title="">Suscripción</a></li>
 					</ul>
-				</div>
+				</nav>
 			</div>
 		</div>
-	</div>
-	<div id="wrapper">
+	</header>
+	<section id="wrapper">
 		<div id="page" class="container">
 			<div id="content">
 				<div class="title">
-					<h2>Vikingos - Temporada final</h2>
+					<h1>Vikingos - Temporada final</h1>
 					<span class="byline">sitio dedicado con las ultimas novedades sobre la temporada final</span>
 				</div>
 				<div class="title">
 					<h3>SINOPSIS</h3>
 				</div>
-				<p>La sexta temporada se centra en el reino del rey Bjorn sobre Kattegat y las aventuras de Ivar en Rus. Bjorn está preparado para su próxima misión pone en peligro la relación con su esposa. En el camino, los hombres se enfrentan a todo tipo de enemigos, incluyendo emboscadas. El Rey sigue los pasos de su padre Ragnar, quien se enfrentó a la misma situación pero pudo salir exitosamente de ella. 
-					Por su parte, Ivar se convierte en un líder muy violento cuyo control se basa en el terror de las personas de su alrededor. En su camino destroza aldeas, viola mujeres y se enfrenta a hombres. Además, tiene que lidiar con sus problemas personales y familiares. </p>
+				<p>La sexta temporada se centra en el reino del rey Bjorn sobre Kattegat y las aventuras de Ivar en Rus.
+					Bjorn está preparado para su próxima misión pone en peligro la relación con su esposa. En el camino,
+					los hombres se enfrentan a todo tipo de enemigos, incluyendo emboscadas. El Rey sigue los pasos de
+					su padre Ragnar, quien se enfrentó a la misma situación pero pudo salir exitosamente de ella.
+					Por su parte, Ivar se convierte en un líder muy violento cuyo control se basa en el terror de las
+					personas de su alrededor. En su camino destroza aldeas, viola mujeres y se enfrenta a hombres.
+					Además, tiene que lidiar con sus problemas personales y familiares. </p>
 				<div id="two-column">
 					<div id="tbox1">
 						<div class="title">
@@ -63,10 +68,10 @@
 							en sitios de Irlanda y no en los bellos paisajes de Noruega o Suecia.</p>
 						<a href="#" class="button">Leer Más</a>
 					</div>
-					
+
 				</div>
 			</div>
-			<div id="sidebar">
+			<aside id="sidebar">
 				<div class="box1">
 					<div class="title">
 						<h2>Capítulos</h2>
@@ -95,10 +100,10 @@
 
 					</ul>
 				</div>
-			</div>
+			</aside>
 		</div>
-	</div>
-	<div id="portfolio-wrapper">
+	</section>
+	<section id="portfolio-wrapper">
 		<div id="portfolio" class="container">
 			<div class="title">
 				<h2>Conoce las ultimas noticias</h2>
@@ -125,16 +130,16 @@
 				<a href="#" class="button">Leer Más</a>
 			</div>
 		</div>
-	</div>
+	</section>
 	<a href="#">
 		<p class="float-end circle">
 			Suscríbete
 		</p>
 	</a>
-	<div id="copyright" class="container">
+	<footer id="copyright" class="container">
 		<p>&copy; Untitled. All rights reserved. | Design by <a href="https://github.com/BertyDev"
 				rel="nofollow">BertyDev</a>.</p>
-	</div>
+	</footer>
 </body>
 
 </html>
